; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_playlist.c_vlclua_playlist_status.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_playlist.c_vlclua_playlist_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"stopped\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"started\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"playing\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"paused\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"stopping\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_playlist_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_playlist_status(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @vlclua_get_playlist_internal(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @vlc_playlist_GetPlayer(i32* %8)
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @vlc_player_Lock(i32* %10)
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @vlc_player_GetState(i32* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @vlc_player_Unlock(i32* %14)
  %16 = load i32, i32* %5, align 4
  switch i32 %16, label %32 [
    i32 129, label %17
    i32 130, label %20
    i32 131, label %23
    i32 132, label %26
    i32 128, label %29
  ]

17:                                               ; preds = %1
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @lua_pushliteral(i32* %18, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  br label %35

20:                                               ; preds = %1
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @lua_pushliteral(i32* %21, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  br label %35

23:                                               ; preds = %1
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @lua_pushliteral(i32* %24, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  br label %35

26:                                               ; preds = %1
  %27 = load i32*, i32** %2, align 8
  %28 = call i32 @lua_pushliteral(i32* %27, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  br label %35

29:                                               ; preds = %1
  %30 = load i32*, i32** %2, align 8
  %31 = call i32 @lua_pushliteral(i32* %30, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0))
  br label %35

32:                                               ; preds = %1
  %33 = load i32*, i32** %2, align 8
  %34 = call i32 @lua_pushliteral(i32* %33, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0))
  br label %35

35:                                               ; preds = %32, %29, %26, %23, %20, %17
  ret i32 1
}

declare dso_local i32* @vlclua_get_playlist_internal(i32*) #1

declare dso_local i32* @vlc_playlist_GetPlayer(i32*) #1

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local i32 @vlc_player_GetState(i32*) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1

declare dso_local i32 @lua_pushliteral(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
